syntax = "proto3";

package raft;

// Raft RPCs from Figure 2 in the Raft paper (leader election & log replication).
// Implementations rely on Raft's state machine: followers respond, candidates solicit
// votes, leaders replicate logs and act as heartbeats.
service Raft {
	// Invoked by candidates to gather votes (§5.2).
	rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply);
	// Invoked by leader to replicate log entries (§5.3); also used as heartbeat (§5.2).
	rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesReply);
}

message AppendEntriesArgs {
	// Leader’s current term; follower updates if lower.
	uint32 term = 1;
	// So follower can redirect clients to current leader.
	uint32 leader_id = 2;
	// Index & term of log entry immediately preceding new ones (consistency check).
	uint32 prev_log_index = 3;
	uint32 prev_log_term = 4;
	// Log entries to store (empty when sending heartbeat).
	repeated LogEntry entries = 5;
	// Leader’s commit index so follower can advance commit index.
	uint32 leader_commit = 6;
}
message AppendEntriesReply {
	// Current term for leader to update itself.
	uint32 term = 1;
	// True if follower contained matching prev_log_index and prev_log_term.
	bool success = 2;
}
message LogEntry {
	// Term when entry was received by leader.
	uint32 term = 1;
	// State machine command.
	string command = 2;
}

message RequestVoteArgs {
	// Candidate’s term.
	uint32 term = 1;
	// Candidate requesting vote.
	uint32 candidate_id = 2;
	// Index/term of candidate’s last log entry (up-to-dateness check).
	uint32 last_log_index = 3;
	uint32 last_log_term = 4;
}
message RequestVoteReply {
	// Current term for candidate to update itself.
	uint32 term = 1;
	// True means candidate received vote.
	bool vote_granted = 2;
}	

